# pytorch-tutorial

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/cpu/: devcontainer.json
.devcontainer/gpu/: devcontainer.json
pytorch_tutorial/: workload.py
pytorch_tutorial/learn-the-basics/: automatic-differentiation.ipynb  build-the-neural-network.ipynb  datasets-and-dataloaders.ipynb  optimizing-model-parameters.ipynb  quickstart.ipynb  save-and-load-the-model.ipynb  tensors.ipynb  transforms.ipynb
tests/: test.py  workload.py
